k8s-deploy/storage/redis-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - image: hub.baidubce.com/yanqian-tools/redis:4.0.2
        imagePullPolicy: Always
        name: redis
        ports:
        - containerPort: 6379
          protocol: TCP
        resources:
          limits:
            memory: 2048Mi
          requests:
            memory: 100Mi
        volumeMounts:
        - mountPath: /data
          name: redis
      volumes:
      - name: redis
        persistentVolumeClaim:
          claimName: redis-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
    nodePort: 6379
  selector:
    app: redis
  type: NodePort
