k8s-deploy/storage/minio-deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app: "minio"
spec:
  type: NodePort
  ports:
    - port: 9000
      targetPort: 9000
      nodePort: 30003
      protocol: TCP
      name: http
  selector:
    app: "minio"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: "minio"
  name: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "minio"
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: "minio"
    spec:
      containers:
      - name: minio
        image: minio:RELEASE.2019-10-12T01-39-57Z
        imagePullPolicy: IfNotPresent
        args:
          - server
          - /export
        ports:
          - name: service
            containerPort: 9000
            protocol: TCP
        resources:
          limits:
            memory: 1Gi
          requests:
            memory: 512Mi
        livenessProbe:
          initialDelaySeconds: 180
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
          tcpSocket:
            port: 9000
        volumeMounts:
        - mountPath: /export
          name: minio
          subPath: data
        - mountPath: /root/.minio/
          name: minio
          subPath: config
      volumes:
      - name: minio
        persistentVolumeClaim:
          claimName: minio
---
# Source: minio/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minio
  labels:
    app: "minio"
spec:
  rules:
    - host: oss.7otech.com
      http:
        paths:
          - path: /
            backend:
              serviceName: minio
              servicePort: 9000
